@@ -1,6 +1,6 @@
 # You can override the default settings by editing this file.
-# Alternatively, you can specify them on tant command line with -D flags.
-# For example:  ant -Dwith-collections=false
+# Alternatively, you can specify them on the ant command line with -D flags.
+# For example:  ant -Denable-xml=false
 # This optional file is a handy place to put your settings.
 # Not only is it more convenient than using -D on the command line,
 # eventually we may use the dependset task to check these settings.
@@ -27,13 +27,6 @@
 # JIKESPATH is set, contrary to what the comments say.
 # You can either fix your ant.bat script, or uncomment this:
 # build.compiler=jikes
-
-# Whether to use Java2 collections.
-# The default is to use collections if java.util.List is in the classpath.
-# Uncomment the following line to not use Java2 collections:
-# with-collections=false
-# Uncomment the following line to force use of Java2 collections:
-# with-collections=true
 
 # Whether to compile Kawa's AWT interface.
 # The default is to use AWT if java.awt.Component is in the classpath.
